# poetry-path-fail-test

./: pyproject.toml
package_a/: setup.py
