[tool.poetry]
name = "poetry-path-fail-test"
version = "0.1.0"
description = ""
authors = ["William Richard <wrichard@indigoag.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"a" = { path = "./package_a/", develop = true,  extras = ["dev"] }


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
